[package]
name = "wimbd"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/allenai/wimbd"
homepage = "https://github.com/allenai/wimbd"
description = "A CLI for inspecting and analyzing large text datasets."

[lib]
name = "wimbd"
path = "src/lib.rs"

[[bin]]
name = "wimbd"
path = "src/main.rs"
required-features = ["build-binary"]

[dependencies]
unicode-segmentation = "1.7"
flate2 = "1.0"
indicatif = "0.17"
structopt = { version = "0.3", optional = true }
num-traits = "0.2"
atomic-traits = "0.3"
anyhow = "1.0"
serde_json = "1.0.97"
serde = { version = "1.0", features = ["derive", "rc"] }
ahash = { version = "0.8.5", features = ["runtime-rng"] }
threadpool = "1.8"
log = "0.4.20"
simple_logger = { version = "3.0", features = ["stderr", "colors"], default-features = false, optional = true }
console = "0.15"
num_cpus = "1.0"
parse-size = "1.0"
thousands = "0.2"
humantime = "2.1"
tokenizers = { version = "0.15.1", features = ["http"] }
rand = "0.8"
glob = "0.3.1"
regex = "1.10.3"

[features]
default = ["build-binary"]
build-binary = ["simple_logger", "structopt"]
